// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders expected classes and components with default props for non-visitor messages 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="transitionWrapper"
      style="opacity: 1; bottom: 0px;"
    >
      <div
        class="wrapper"
      >
        <div>
          <div
            class="message botMessage"
          >
            <div>
              <div
                class="messageBubble messageBubble botBackground"
              >
                <span
                  class="Linkify"
                >
                  Here is an article that may help:
                </span>
              </div>
            </div>
          </div>
          <div
            class="messageBubble container"
          >
            <div
              class="firstItem lastItem optionItem"
            >
              <div
                class="result"
              >
                <div
                  class="heading"
                >
                  <span
                    class="container icon Icon--article"
                    type="Icon--article"
                  />
                  <div
                    class="optionText"
                  >
                    title 123
                  </div>
                </div>
                <div
                  class="snippet"
                >
                  <div>
                    to be filled later 123
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="transitionWrapper"
      style="opacity: 1; bottom: 0px;"
    >
      <div
        class="wrapper"
      >
        <div
          class="message botMessage"
        >
          <div>
            <div
              class="messageBubble messageBubble botBackground"
            >
              <span
                class="Linkify"
              >
                hello
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="transitionWrapper"
      style="opacity: 1; bottom: 0px;"
    >
      <div
        class="wrapper"
      />
    </div>
    <div
      class="transitionWrapper"
      style="opacity: 1; bottom: 0px;"
    >
      <div
        class="wrapper"
      >
        <div
          class="container"
        >
          <div
            class="container buttonRight "
          >
            <button
              class="
      button
      
    "
            >
              Yes
            </button>
            <button
              class="
      button
      
    "
            >
              No, I need help
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="transitionWrapper"
      style="opacity: 1; bottom: 0px;"
    >
      <div
        class="wrapper"
      >
        <div
          class="container"
        >
          <div
            class="container buttonRight "
          >
            <button
              class="
      button
      topOption
    "
            >
              It's related, but it didn't answer my question
            </button>
            <button
              class="
      button
      block
    "
            >
              It's not related to my question
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders expected classes and components with default props for visitor messages 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="transitionWrapper"
      style="opacity: 1; bottom: 0px;"
    >
      <div
        class="wrapper"
      >
        <div
          class="message userMessage"
        >
          <div>
            <div
              class="messageBubble messageBubble userBackground"
            >
              <span
                class="Linkify"
              >
                hello
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
